[metadata]
name = ravenml
author = Carson Schubert, Abhi Dhir, Pratyush Singh
author-email = carson.schubert14@gmail.com
summary = ML Training CLI Tool
description-file = README.md
license = MIT
keywords =
    machine learning
    data science
    
[files]
packages =
    ravenml
    
[entry_points]
console_scripts =
    ravenml = ravenml.cli:cli
