[metadata]
name = ravenml
author = Carson Schubert, Abhi Dhir, Pratyush Singh
author-email = carson.schubert14@gmail.com
summary = ML Training CLI Tool
description-file = README.md
license = MIT
keywords =
    machine learning
    data science
version = 1.2.3
    
[files]
packages =
    ravenml
    
[entry_points]
console_scripts =
    ravenml = ravenml.cli:cli
egg_info.writers =
    # pbr.json = pbr.pbr_json:write_pbr_json
    git_info.json = ravenml.utils.git:write_test
